# pick_place_ros2

./: .pre-commit-config.yaml  README.md  upstream.repos
.github/workflows/: format.yaml
pick_place_app/: CMakeLists.txt  package.xml
pick_place_app/config/: path_constraints.yaml  pick_place_static_panda.yaml  pick_place_static_ur5e.yaml  pick_place_task_demo.yaml  pick_place_task_ur5e.yaml  point_to_point_ur5e.yaml  waypoints.yaml
pick_place_app/include/pick_place_app/app/: pick_place_static_task.h  pick_place_task.h  point_to_point.h
pick_place_app/include/pick_place_app/skills/: compute_path_skill.h  compute_path_with_moveitcpp_skill.h  detect_aruco_marker_skill.h  execute_trajectory_skill.h  io_gripper_with_ur_skill.h  utils.h
pick_place_app/launch/: call_io_server.launch.py  call_pick_place_server.launch.py  pick_place_demo_ur5e.launch.py  pick_place_static_demo_ur5e.launch.py  point_to_point_ur5e.launch.py
pick_place_app/src/: main_pick_place_static.cpp  main_pick_place_task.cpp  main_point_to_point.cpp
pick_place_app/src/app/: CMakeLists.txt  pick_place_static_task.cpp  pick_place_task.cpp  point_to_point.cpp
pick_place_app/src/skills/: CMakeLists.txt  compute_path_moveitcpp_skill.cpp  compute_path_skill.cpp  detect_aruco_marker_skill copy.cpp  detect_aruco_marker_skill.cpp  execute_trajectory_skill.cpp  io_gripper_with_ur_skill.cpp  modify_planning_scene_skill.cpp  utils.cpp
